# Chamber

./: Cargo.toml  LICENSE  README.md
crates/chamber_analyzer/: Cargo.toml
crates/chamber_analyzer/src/: lib.rs  rule.rs
crates/chamber_analyzer/src/rules/: bar_length.rs  mod.rs  suspicious_duration.rs  unknown_decoration.rs  unusual_octave.rs
crates/chamber_analyzer/tests/: main.rs
crates/chamber_ast/: Cargo.toml
crates/chamber_ast/src/: lib.rs
crates/chamber_cli/: Cargo.toml
crates/chamber_cli/src/: main.rs
crates/chamber_cst/: Cargo.toml
crates/chamber_cst/src/: lib.rs  node.rs  print.rs  token.rs
crates/chamber_diagnostics/: Cargo.toml  DIAGNOSTICS.md
crates/chamber_diagnostics/src/: code.rs  diagnostic.rs  lib.rs  line_index.rs  severity.rs  sink.rs
crates/chamber_diagnostics/tests/: main.rs
crates/chamber_formatter/: Cargo.toml
crates/chamber_formatter/examples/: format_file.rs  format_tune.rs
crates/chamber_formatter/src/: config.rs  formatter.rs  lib.rs
crates/chamber_lexer/: Cargo.toml
crates/chamber_lexer/src/: cst_lexer.rs  lexer.rs  lib.rs  token.rs
crates/chamber_lexer/tests/: main.rs
crates/chamber_parser/: Cargo.toml
crates/chamber_parser/src/: ast.rs  cst_parser.rs  cst_to_ast.rs  lib.rs  parser.rs
crates/chamber_parser/tests/: error_recovery.rs  header_validation.rs  main.rs
crates/chamber_syntax/: Cargo.toml
crates/chamber_syntax/src/: kind.rs  lib.rs  trivia.rs
crates/chamber_text_size/: Cargo.toml
crates/chamber_text_size/src/: lib.rs  range.rs  size.rs
crates/chamber_text_size/tests/: main.rs
crates/chamber_wasm/: Cargo.toml
crates/chamber_wasm/src/: lib.rs
examples/: README.md  errors.abc  simple_error.abc  test_lexer.rs  valid.abc
examples/errors/formatter/: unformat.abc
examples/errors/header/: duplicate_x.abc  empty_x.abc  invalid_key.abc  invalid_length.abc  invalid_meter.abc  invalid_tempo.abc  invalid_x_value.abc  missing_k.abc  missing_x.abc  wrong_order.abc
examples/errors/music/: invalid_duration.abc  multiple_errors.abc  unclosed_annotation.abc  unclosed_chord.abc  unclosed_grace.abc  unclosed_inline_field.abc  unclosed_slur.abc  unexpected_brackets.abc  unexpected_char.abc  unknown_decoration.abc
examples/errors/structure/: empty.abc  field_in_body.abc
examples/formatter/: after.abc  before.abc
examples/valid/: annotations.abc  decorations.abc  inline_fields.abc  modes.abc  simple.abc
examples/warnings/: bar_length.abc  bar_length_common.abc  bar_length_cut.abc  bar_length_jig.abc  bar_length_triplet.abc  bar_length_waltz.abc  empty_chord.abc  empty_title.abc  missing_title.abc  suspicious_duration.abc  tuplet_mismatch.abc  unusual_octave.abc
issues/: 001-repeat-end-spacing-bug.md  002-normalize-multiple-spaces.md  003-repeat-start-spacing-bug.md  004-tuplet-internal-spacing.md  005-slur-internal-spacing.md  006-header-body-separator.md
