[package]
name = "chamber_analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chamber_parser = { path = "../chamber_parser" }
chamber_diagnostics = { path = "../chamber_diagnostics" }
chamber_text_size = { path = "../chamber_text_size" }
