[package]
name = "chamber_analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chamber_ast = { path = "../chamber_ast" }
chamber_diagnostics = { path = "../chamber_diagnostics" }
chamber_text_size = { path = "../chamber_text_size" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
chamber_parser = { path = "../chamber_parser" }
