[package]
name = "chamber_formatter"
version = "0.1.0"
edition = "2021"

[dependencies]
chamber_cst = { path = "../chamber_cst" }
chamber_syntax = { path = "../chamber_syntax" }
chamber_text_size = { path = "../chamber_text_size" }
chamber_parser = { path = "../chamber_parser" }
serde = { version = "1", features = ["derive"] }
