[package]
name = "chamber_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
chamber_ast = { path = "../chamber_ast" }
chamber_cst = { path = "../chamber_cst" }
chamber_syntax = { path = "../chamber_syntax" }
chamber_text_size = { path = "../chamber_text_size" }
chamber_lexer = { path = "../chamber_lexer" }
chamber_diagnostics = { path = "../chamber_diagnostics" }
serde = { version = "1", features = ["derive"] }
